Fix `isValidVirtualLocation()` check